# fly-in

./: .gitignore  Makefile  README.md  main.py  parser.py  pyproject.toml  test.txt  test1.txt  visualizer.py
maps/challenger/: 01_the_impossible_dream.txt
tests/: dirt_paper.tldr  dirt_paper_complete.tldr  test_parser.py
tools/maps/easy/: 02_simple_fork.txt
tools/maps/medium/: 03_priority_puzzle.txt
