[project]
name = "fly-in"
version = "0.1.0"
description = ""
authors = [
    {name = "youssenna",email = "youssefennajar2@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pdbpp (>=0.12.1,<0.13.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false